--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <ul>
                     <li>stars,</li>
                     <li>planets,</li>
-                    <li>and other shit</li>
+                    <li>and other alsdhjk shit</li>
                 </ul>
         <img src= "images/test-image.jpg" alt="test image">
     </body>
