--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="styles/style.css" rel="stylesheet">
         <meta charset="utf-8">
         <title>Taylor York</title>
     </head>
@@ -11,7 +12,7 @@
                 <ul>
                     <li>stars,</li>
                     <li>planets,</li>
-                    <li>and other alsdhjk shit</li>
+                    <li>and other shit</li>
                 </ul>
         <img src= "images/test-image.jpg" alt="test image">
     </body>
