--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <h1>This website sucks ass</h1>
-        <a href="https://google.com/">gibberish</a>
+        <a href="mailto:tayloryork@creighton.edu">Get in Touch!</a>
             <P>look, it's space</P>
                 <ul>
                     <li>stars,</li>
