--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Taylor York</title>
     </head>
     <body>
-        <h1>This website sucks ass</h1>
+        <h1>Under Construction</h1>
         <a href="mailto:tayloryork@creighton.edu">Get in Touch!</a>
             <P>look, it's space</P>
                 <ul>
