--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li>stars,</li>
                     <li>planets,</li>
-                    <li>and other shit</li>
+                    <li>and other stuff</li>
                 </ul>
         <img src= "images/test-image.jpg" alt="test image">
     </body>
