--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="author" content="Taylor York">
+        <meta name="description" content="Taylor York is a senior Biology major at Creighton University. In the fall of 2022 he will be attending medical school at the University of Nebraska Medical Center">
+        <meta name="keywords" content ="Taylor York, taylorcyork, Taylor C York, Taylor, York, tayloryork, Biology, Medicine, Creighton, Medicine, UNMC, University of Nebraska Medical Center, Omaha, Scottsbluff"
         <link href="styles/style.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-        <meta charset="utf-8">
         <title>Taylor York</title>
     </head>
     <body>
