--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="author" content="Taylor York">
-        <meta name="description" content="Taylor York is a senior Biology major at Creighton University. In the fall of 2022 he will be attending medical school at the University of Nebraska Medical Center">
-        <meta name="keywords" content ="Taylor York, taylorcyork, Taylor C York, Taylor, York, tayloryork, Biology, premed, Medicine, Creighton, Medicine, UNMC, University of Nebraska Medical Center, Omaha, Scottsbluff"
+        <meta name="description" content="Taylor York is a senior Biology major at Creighton University.
+        In the fall of 2022 he will be attending medical school at the University of Nebraska Medical Center">
+        <meta name="keywords" content ="Taylor York, taylorcyork, Taylor C York, Taylor, York, tayloryork, Biology,
+        premed, Medicine, Creighton, Medicine, UNMC, University of Nebraska Medical Center, Omaha, Scottsbluff"
         <link href="styles/style.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,13 +15,10 @@
     </head>
     <body>
         <h1>Under Construction</h1>
-        <a href="mailto:tayloryork@creighton.edu">Get in Touch!</a>
-            <P>look, it's space</P>
-                <ul>
-                    <li>stars,</li>
-                    <li>planets,</li>
-                    <li>and other stuff</li>
-                </ul>
-        <img src= "images/test-image.jpg" alt="test image">
+            <h2>About</h2>
+                <p>I'm currently an undergraduate student majoring in Biology at Creighton University. 
+                Next semester, I'm excited to have the opportunity to attend medical school at the University of Nebraska Medical Center.
+                In my free time I enjoy playing chess, watching Formula 1 Racing, and learning new skills (like building this website!) </p>
+         <a href="mailto:tayloryork@creighton.edu">Get in Touch!</a>
     </body>
 </html>
