--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <body>
         <h1>Under Construction</h1>
             <h2>About</h2>
-                <p>I'm currently an undergraduate student majoring in Biology at Creighton University. 
-                Next semester, I'm excited to have the opportunity to attend medical school at the University of Nebraska Medical Center.
-                In my free time I enjoy playing chess, watching Formula 1 Racing, and learning new skills (like building this website!) </p>
+                <p>I'm currently an undergraduate student majoring in Biology at Creighton University. </p>
+                <p>Next semester, I'm excited to have the opportunity to attend medical school at the University of Nebraska Medical Center.</p>
+                <p>In my free time I enjoy playing chess, watching Formula 1 Racing, and learning new skills (like building this website!) </p>
          <a href="mailto:tayloryork@creighton.edu">Get in Touch!</a>
     </body>
 </html>
