--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Taylor York is a senior Biology major at Creighton University.
         In the fall of 2022 he will be attending medical school at the University of Nebraska Medical Center">
         <meta name="keywords" content ="Taylor York, taylorcyork, Taylor C York, Taylor, York, tayloryork, Biology,
-        premed, Medicine, Creighton, Medicine, UNMC, University of Nebraska Medical Center, Omaha, Scottsbluff"
+        premed, Medicine, Creighton, Medicine, UNMC, University of Nebraska Medical Center, Omaha, Scottsbluff">
         <link href="styles/style.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
