--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="author" content="Taylor York">
+        <meta name="title" content= "Taylor York">
         <meta name="description" content="Taylor York is a senior Biology major at Creighton University.
         In the fall of 2022 he will be attending medical school at the University of Nebraska Medical Center">
         <meta name="keywords" content ="Taylor York, taylorcyork, Taylor C York, Taylor, York, tayloryork, Biology,
