--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <title>Taylor York</title>
     </head>
     <body>
-        <h1>Under Construction</h1>
+        <h1>Under Construction <span class="material-icons"> construction </span> </h1>
             <h2>About</h2>
                 <p>I'm currently an undergraduate student majoring in Biology at Creighton University. 
                     <br>During my time at Creighton, I've had the opportunity to do fun things like research prions,
