--- a/index.html
+++ b/index.html
@@ -11,19 +11,32 @@
         <link href="styles/style.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <title>Taylor York</title>
     </head>
     <body>
-        <h1>Under Construction <span class="material-icons"> construction </span> </h1>
-            <h2>About</h2>
-                <p>I'm currently an undergraduate student majoring in Biology at Creighton University. 
-                    <br>During my time at Creighton, I've had the opportunity to do fun things like research prions,
-                    <br> TA Biology courses, and work at a COVID-19 Vaccine Clinic.
-                </p>
-                <p>Next semester, I'm excited to have the opportunity to attend medical school at the University of Nebraska Medical Center.</p>
-                <p>In my free time I enjoy playing chess, watching Formula 1 Racing, and learning new skills (like building this website!) </p>
+        <nav>
+            <ul> <a href="#about"> About </a> </ul>
+            <ul> <a href="#research"> Research </a> </ul>
+            <ul> <a href="#teaching"> Teaching </a> </ul>
+        </nav>
+            <h1>Under Construction <span class="material-icons"> construction </span> </h1>
+                <div id="about"><a name="about"></a>
+                    <h2>About</h2>
+                        <p>I'm currently an undergraduate student majoring in Biology at Creighton University. 
+                            <br>During my time at Creighton, I've had the opportunity to do fun things like research prions,
+                            <br> TA Biology courses, and work at a COVID-19 Vaccine Clinic.
+                        </p>
+                        <p>Next semester, I'm excited to have the opportunity to attend medical school at the University of Nebraska Medical Center.</p>
+                        <p>In my free time I enjoy playing chess, watching Formula 1 Racing, and learning new skills (like building this website!) </p>
+                </div>
+                <div id="research"><a name="research"></a>
+                    <h2>Research</h2>
+                </div>
+                <div id="teaching"><a name="teaching"></a>
+                    <h2>Teaching</h2>
+                </div>
          <a href="mailto:tayloryork@creighton.edu">Get in Touch!</a>
     </body>
 </html>
