--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
     </head>
     <body>
         <nav>
-            <ul> <a href="#about"> About </a> </ul>
-            <ul> <a href="#research"> Research </a> </ul>
-            <ul> <a href="#teaching"> Teaching </a> </ul>
+            <ul>
+                <li> <a href="#about"> About </a> </li>
+                <li> <a href="#research"> Research </a> </li>
+                <li> <a href="#teaching"> Teaching </a> </li>
+            </ul>
         </nav>
             <h1>Under Construction <span class="material-icons"> construction </span> </h1>
                 <div id="about"><a name="about"></a>
