--- a/index.html
+++ b/index.html
@@ -16,19 +16,21 @@
         <title>Taylor York</title>
     </head>
     <body>
-        <nav>
-            <ul>
-                <li> <a href="#about"> About </a> </li>
-                <li> <a href="#research"> Research </a> </li>
-                <li> <a href="#teaching"> Teaching </a> </li>
-            </ul>
-        </nav>
+        <section>
+            <nav>
+                <ul>
+                    <article><li> <a href="#about"> About </a> </li></article>
+                    <article><li> <a href="#research"> Research </a> </li></article>
+                    <article><li> <a href="#teaching"> Teaching </a> </li></article>
+                </ul>
+            </nav>
+        </section>
             <h1>Under Construction <span class="material-icons"> construction </span> </h1>
                 <div id="about"><a name="about"></a>
                     <h2>About</h2>
                         <p>I'm currently an undergraduate student majoring in Biology at Creighton University. 
-                            <br>During my time at Creighton, I've had the opportunity to do fun things like research prions,
-                            <br> TA Biology courses, and work at a COVID-19 Vaccine Clinic.
+                        During my time at Creighton, I've had the opportunity to do fun things like research prions,
+                        TA Biology courses, and work at a COVID-19 Vaccine Clinic.
                         </p>
                         <p>Next semester, I'm excited to have the opportunity to attend medical school at the University of Nebraska Medical Center.</p>
                         <p>In my free time I enjoy playing chess, watching Formula 1 Racing, and learning new skills (like building this website!) </p>
@@ -39,6 +41,8 @@
                 <div id="teaching"><a name="teaching"></a>
                     <h2>Teaching</h2>
                 </div>
-         <a href="mailto:tayloryork@creighton.edu">Get in Touch!</a>
+         <div id="email">
+             <a href="mailto:tayloryork@creighton.edu">Get in Touch!</a>
+        </div>
     </body>
 </html>
