--- a/index.html
+++ b/index.html
@@ -16,15 +16,13 @@
         <title>Taylor York</title>
     </head>
     <body>
-        <section>
-            <nav>
-                <ul>
-                    <article><li> <a href="#about"> About </a> </li></article>
-                    <article><li> <a href="#research"> Research </a> </li></article>
-                    <article><li> <a href="#teaching"> Teaching </a> </li></article>
-                </ul>
-            </nav>
-        </section>
+        <nav>
+             <ul>
+                <li> <a href="#about"> About </a> </li>
+                <li> <a href="#research"> Research </a> </li>
+                <li> <a href="#teaching"> Teaching </a> </li>
+            </ul>
+        </nav>
             <h1>Under Construction <span class="material-icons"> construction </span> </h1>
                 <div id="about"><a name="about"></a>
                     <h2>About</h2>
