--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <h2>About</h2>
                         <p>I'm currently an undergraduate student majoring in Biology at Creighton University. 
                         During my time at Creighton, I've had the opportunity to do fun things like research prions,
-                        TA Biology courses, and work at a COVID-19 Vaccine Clinic.
+                        TA Biology courses, and work at a COVID-19 vaccine clinic.
                         </p>
                         <p>Next semester, I'm excited to have the opportunity to attend medical school at the University of Nebraska Medical Center.</p>
                         <p>In my free time I enjoy playing chess, watching Formula 1 Racing, and learning new skills (like building this website!) </p>
