--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 </div>
                 <div id="research"><a name="research"></a>
                     <h2>Research</h2>
+                    <p> <img src="images/labbarchen.jpg" alt="lab1"> <img src="images/laboasis.jpg" alt="lab2"></p>
                 </div>
                 <div id="teaching"><a name="teaching"></a>
                     <h2>Teaching</h2>
