--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                         <img src="images/labbarchen.jpg" alt="lab1"> 
                         <img src="images/laboasis.jpg" alt="lab2">
                     </p>
+                    <p>
+                        Here are some of the awesome people I've been able to learn from
+                    </p>
                 </div>
                 <div id="teaching"><a name="teaching"></a>
                     <h2>Teaching</h2>
