--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 </div>
                 <div id="teaching"><a name="teaching"></a>
                     <h2>Teaching</h2>
+                        <p>I've enjoyed getting to work as a teaching assistant the last few semesters. Here are the syllabi that show some of the topics I helped teach students. </p>
                 </div>
          <div id="email">
              <a href="mailto:tayloryork@creighton.edu">Get in Touch!</a>
