--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
             <h1>Under Construction <span class="material-icons"> construction </span> </h1>
                 <div id="about"><a name="about"></a>
                     <h2>About</h2>
+                        <div id="headshot">
+                            <p>
+                                <img src="images/Headshot_TY_Edit_Under1MB.jpg" alt="picture of me">
+                            </p>
+                        </div>
                         <p>I'm currently an undergraduate student majoring in Biology at Creighton University. 
                         During my time at Creighton, I've had the opportunity to do fun things like research prions,
                         TA Biology courses, and work at a COVID-19 vaccine clinic.
@@ -40,12 +45,16 @@
                         <img src="images/laboasis.jpg" alt="lab2">
                     </p>
                     <p>
-                        Here are some of the awesome people I've been able to learn from
+                        Here are a few of the awesome people I've been able to learn from
                     </p>
                 </div>
                 <div id="teaching"><a name="teaching"></a>
                     <h2>Teaching</h2>
                         <p>I've enjoyed getting to work as a teaching assistant the last few semesters. Here are the syllabi that show some of the topics I helped teach students. </p>
+                        <p> 
+                            <a href="media/BIO206.pdf"> BIO 206 </a>
+                            <a href="media/BIO450.pdf"> BIO 450</a>
+                        </p>
                 </div>
          <div id="email">
              <a href="mailto:tayloryork@creighton.edu">Get in Touch!</a>
