--- a/index.html
+++ b/index.html
@@ -28,13 +28,12 @@
                     <h2>About</h2>
                         <div id="headshot">
                             <p>
-                                <img src="images/Headshot_TY_Edit_Under1MB.jpg" alt="picture of me">
+                                <img src="images/squarehead.jpg" alt="picture of me">
                             </p>
                         </div>
                         <p>I'm currently an undergraduate student majoring in Biology at Creighton University. 
                         During my time at Creighton, I've had the opportunity to do fun things like research prions,
-                        TA Biology courses, and work at a COVID-19 vaccine clinic.
-                        </p>
+                        TA Biology courses, and work at a COVID-19 vaccine clinic.</p>
                         <p>Next semester, I'm excited to have the opportunity to attend medical school at the University of Nebraska Medical Center.</p>
                         <p>In my free time I enjoy playing chess, watching Formula 1 Racing, and learning new skills (like building this website!) </p>
                 </div>
