--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
             <h1>Under Construction <span class="material-icons"> construction </span> </h1>
                 <div id="about"><a name="about"></a>
-                    <h2>About</h2>
+                    <h2>Aboot</h2>
                         <div id="headshot">
                             <p>
                                 <img src="images/squarehead.jpg" alt="picture of me">
