--- a/index.html
+++ b/index.html
@@ -25,12 +25,10 @@
         </nav>
             <h1>Under Construction <span class="material-icons"> construction </span> </h1>
                 <div id="about"><a name="about"></a>
-                    <h2>Aboot</h2>
-                        <div id="headshot">
-                            <p>
-                                <img src="images/squarehead.jpg" alt="picture of me">
-                            </p>
-                        </div>
+                    <h2>About</h2>
+                        <p>
+                            <img src="images/squarehead.jpg" alt="picture of me">
+                        </p>
                         <p>I'm currently an undergraduate student majoring in Biology at Creighton University. 
                         During my time at Creighton, I've had the opportunity to do fun things like research prions,
                         TA Biology courses, and work at a COVID-19 vaccine clinic.</p>
