--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
         <meta name="title" content= "Taylor York">
         <meta name="description" content="Taylor York is a senior Biology major at Creighton University.
         In the fall of 2022 he will be attending medical school at the University of Nebraska Medical Center">
-        <meta name="keywords" content ="Taylor York, taylorcyork, Taylor C York, Taylor, York, tayloryork, Biology,
-        premed, Medicine, Creighton, Medicine, UNMC, University of Nebraska Medical Center, Omaha, Scottsbluff">
         <link href="styles/style.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,22 +17,13 @@
         <nav>
              <ul>
                 <li> <a href="#about"> About </a> </li>
-                <li> <a href="#research"> Research </a> </li>
-                <li> <a href="#teaching"> Teaching </a> </li>
             </ul>
         </nav>
             <h1>Under Construction <span class="material-icons"> construction </span> </h1>
                 <div id="about"><a name="about"></a>
                 </div>
-                <div id="research"><a name="research"></a>
-
-                 
-                </div>
-                <div id="teaching"><a name="teaching"></a>
-
-                </div>
          <div id="email">
-             <a href="mailto:tayloryork@creighton.edu">Get in Touch!</a>
+             <a href="mailto:taylorcyork@gmail.com">Get in Touch!</a>
         </div>
     </body>
 </html>
