--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Taylor York</title>
     </head>
     <body>
-        <h1>Under Construction</h1>
+        <h1>Almost before we knew it,</h1>
             <div id="about"><a name="about"></a>
             </div>
             <div id="email">
