--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
         <title>Taylor York</title>
     </head>
     <body>
+        <header>
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                </ul>
+            </nav>
+        </header>
         <h1>Almost before we knew it,</h1>
             <div id="about"><a name="about"></a>
             </div>
