--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <header>
+            <h1>Taylor York</h1>
             <nav>
                 <ul>
                     <li>Home</li>
@@ -16,9 +17,10 @@
                 </ul>
             </nav>
         </header>
-        <h1>Almost before we knew it,</h1>
-            <div id="about"><a name="about"></a>
-            </div>
+        <section>
+            <h2>About</h2>
+            <p>Taylor York is a Biology major at Creighton University.</p>
+        </section>
             <div id="email">
              <a href="mailto:taylorcyork@gmail.com">Get in Touch!</a>
             </div>
