--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </header>
         <section>
             <h2>About</h2>
-            <img src="TYHeadshot.jpg"
+            <img src="images/TYHeadshot.jpg"
             <p>Taylor York is a Biology major at Creighton University.</p>
         </section>
             <div id="email">
