--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="syle.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
@@ -19,7 +20,7 @@
         </header>
         <section>
             <h2>About</h2>
-            <img src="images/TYHeadshot.jpg" width="900" height="1600">
+            <img src="images/TYHeadshot.jpg" width="381" height="571" >
             <p>Taylor York is a Biology major at Creighton University.</p>
         </section>
             <div id="email">
