--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-        <title>Taylor asdYork</title>
+        <title>Taylor York</title>
     </head>
     <body>
         <header>
-            <h1>Taylor York</h1>
+            <h1>Taylor asdYork</h1>
             <nav>
                 <ul>
                     <li>Home</li>
