--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="syle.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
         <title>Taylor York</title>
+        <link rel="stylesheet" href="syle.css">
     </head>
     <body>
         <header>
-            <h1>Taylor asdYork</h1>
+            <h1>Taylor York</h1>
             <nav>
                 <ul>
                     <li>Home</li>
