--- a/index.html
+++ b/index.html
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>Taylor York</title>
-        <link rel="stylesheet" href="syle.css">
+        <link rel="stylesheet" href="styles/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header>
+        <div class="box">
+            <img src="images/TYHeadshot.jpg" class="box-img">
             <h1>Taylor York</h1>
-            <nav>
-                <ul>
-                    <li>Home</li>
-                    <li>About</li>
-                </ul>
-            </nav>
-        </header>
-        <section>
-            <h2>About</h2>
-            <img src="images/TYHeadshot.jpg" width="381" height="571" >
-            <p>Taylor York is a Biology major at Creighton University.</p>
-        </section>
-            <div id="email">
-             <a href="mailto:taylorcyork@gmail.com">Get in Touch!</a>
-            </div>
+            <p>Taylor York is a biology major at Creighton University</p>
+        </div>
+        <div id="email">
+            <a href="mailto:taylorcyork@gmail.com">Get in Touch!</a>
+        </div>
     </body>
 </html>
