--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <a href="#" class="fa fa-facebook"></a>
+        
     </head>
     <body>
         <div class="box">
-            <img src="images/TYHeadshot.jpg" class="box-img">
+            <img src="images/TYHeadshot.png" class="box-img">
             <h1>Taylor York</h1>
             <p>Taylor York is a biology major at Creighton University</p>
-        </div>
-        <div id="email">
-            <a href="mailto:taylorcyork@gmail.com">Get in Touch!</a>
         </div>
     </body>
 </html>
