--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <div class="box">
             <img src="images/TYHeadshot.png" class="box-img">
             <h1>Taylor York</h1>
-            <p>Taylor York is a biology major at Creighton University</p>
+            <p>Taylor York is a biology major at Creighton University. During his free time, he enjoys playing chess and watching Formula One. 
+            This fall, he will be attending the University of Nebraska Medical Center College of Medicine. 
+            </p>
         </div>
     </body>
 </html>
