--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
         <link rel="stylesheet" href="styles/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="stylesheet" href="https://fonts.sandbox.google.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="box">
-            <img src="images/TYHeadshot.png" class="box-img">
+        <div class="about">
+            <img src="images/TYHeadshot.png" class="about-img">
             <h1>Taylor York</h1>
             <p>Taylor York is a biology major at Creighton University. During his free time, he enjoys playing chess and watching Formula One. 
             This fall, he will be attending the University of Nebraska Medical Center College of Medicine. 
             </p>
+        </div>
+        <div class="contact">
+            <a href
         </div>
     </body>
 </html>
