--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="about">
             <img src="images/TYHeadshot.png" class="about-img">
             <h1>Taylor York</h1>
-            <p>Taylor York is a biology major at Creighton University. During his free time, he enjoys playing chess and watching Formula One. 
+            <p>Taylor is a biology major at Creighton University. During his free time, he enjoys playing chess and watching Formula One. 
             This fall, he will be attending the University of Nebraska Medical Center College of Medicine. 
             </p>
         </div>
