--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="about">
             <img src="images/TYHeadshot.png" class="about-img">
             <h1>Taylor York</h1>
-            <p>Taylor is a test year medical student at the University of Nebraska Medical Center. During his free time, he enjoys watching Husker Football and Formula 1 Racing, as well as playing chess.  
+            <p>Taylor is a second year medical student at the University of Nebraska Medical Center. During his free time, he enjoys watching Husker Football and Formula 1 Racing, as well as playing chess.  
             </p>
         </div>
         <div class="contact">
