--- a/index.html
+++ b/index.html
@@ -13,8 +13,36 @@
         <div class="about">
             <img src="images/TYHeadshot.png" class="about-img">
             <h1>Taylor York</h1>
-            <p>I am a second year medical student at the University of Nebraska Medical Center. During my free time, I enjoy watching Husker Football and Formula 1 Racing, as well as playing chess.  
+            <p>I am a second year medical student at the University of Nebraska Medical Center. During my free time, I enjoy watching Husker Football and Formula 1 Racing, as well as playing chess.   
             </p>
+        </div>
+        <div class="education">
+            <h2>Education</h2>
+            <p>M.D., University of Nebraska Medical Center, Omaha, NE 2022-2026</p>
+            <p>B.S. in Biology, Creighton Unviversity, Omaha, NE 2018-2022</p>
+        </div>
+        <div class="awards">
+            <h2>Honors and Awards</h2>
+            <p>Larry D. Skinner Scholarship 2023-2024</p>
+            <p>College of Medicine Class of '73 Scholarship 2023-2024</p>
+            <p>Drs. Ann and David Sjulin Scholarship for Medicine 2022-2023</p>
+            <p>UNMC Educational Scholarship Fund 2022-2023</p>
+            <p>Markoe First Generation Scholarship 2018-2022</p>
+            <p>Oregon Trail Community Foundation Scholarship 2018-2022</p>
+        </div>
+        <div class="Teaching Activities">
+            <h2>Teaching Activities</h2>
+            <p>General Biology: Cellular and Molecular Lab Teaching Assistant 2021-2022</p>
+            <p>Physiology Lab Teaching Assistant 2021</p>
+        </div>
+        <div class="Research Experiences">
+            <h2>Research Experiences</h2>
+            <p>Medical Student Summer Research Program, UNMC 2023</p>
+            <p>Undergraduate Researcher, Creighton University 2019-2022</p>
+            <p>Laboratory Assistant, Creighton University 2018-2019</p>
+        </div>
+        <div class="Publications">
+            <p>1. Block AJ, York TC, Benedict R, Ma J, Bartz JC. Prion protein amio acid sequence influences formation of authentic synthetic PrP^Sc .Scientific Reports. 2023 Jan; 12(1): 44. </p>
         </div>
         <div class="contact">
            <a href= "mailto: taylorcyork@gmail.com" <span class="material-icons">mail</span></a>
