--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
             <p>Markoe First Generation Scholarship 2018-2022</p>
             <p>Oregon Trail Community Foundation Scholarship 2018-2022</p>
         </div>
-        <div class="Teaching Activities">
+        <div class="teaching">
             <h2>Teaching Activities</h2>
             <p>General Biology: Cellular and Molecular Lab Teaching Assistant 2021-2022</p>
             <p>Physiology Lab Teaching Assistant 2021</p>
         </div>
-        <div class="Research Experiences">
+        <div class="research">
             <h2>Research Experiences</h2>
             <p>Medical Student Summer Research Program, UNMC 2023</p>
             <p>Undergraduate Researcher, Creighton University 2019-2022</p>
             <p>Laboratory Assistant, Creighton University 2018-2019</p>
         </div>
-        <div class="Publications">
+        <div class="publications">
             <p>1. Block AJ, York TC, Benedict R, Ma J, Bartz JC. Prion protein amio acid sequence influences formation of authentic synthetic PrP^Sc .Scientific Reports. 2023 Jan; 12(1): 44. </p>
         </div>
         <div class="contact">
