--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <p>Laboratory Assistant, Creighton University 2018-2019</p>
         </div>
         <div class="publications">
-            <p>1. Block AJ, York TC, Benedict R, Ma J, Bartz JC. Prion protein amio acid sequence influences formation of authentic synthetic PrP<sup>Sc</sup> .Scientific Reports. 2023 Jan; 12(1): 44. </p>
+            <p>1. Block AJ, <b>York TC</b>, Benedict R, Ma J, Bartz JC. Prion protein amio acid sequence influences formation of authentic synthetic PrP<sup>Sc</sup> .Scientific Reports. 2023 Jan; 12(1): 44. </p>
         </div>
         <div class="contact">
            <a href= "mailto: taylorcyork@gmail.com" <span class="material-icons">mail</span></a>
