--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </div>
         <div class="awards">
             <h2>Honors and Awards</h2>
+            <p>Nebraska Medical Education Foundation Scholarship 2024-2025</p>
             <p>Larry D. Skinner Scholarship 2023-2024</p>
             <p>College of Medicine Class of '73 Scholarship 2023-2024</p>
             <p>Drs. Ann and David Sjulin Scholarship for Medicine 2022-2023</p>
@@ -32,6 +33,8 @@
         </div>
         <div class="teaching">
             <h2>Teaching Activities</h2>
+            <p>Pre-clinical Curriculum Teaching Assistant 2025</p>
+            <p>Gastrointestinal Anatomy Teaching Assistant 2025</p>
             <p>General Biology: Cellular and Molecular Lab Teaching Assistant 2021-2022</p>
             <p>Physiology Lab Teaching Assistant 2021</p>
         </div>
