--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="about">
             <img src="images/TYHeadshot.png" class="about-img">
             <h1>Taylor York</h1>
-            <p>I am a second year medical student at the University of Nebraska Medical Center. During my free time, I enjoy watching Husker Football and Formula 1 Racing, as well as playing chess.   
+            <p>I am a fourth year medical student at the University of Nebraska Medical Center. During my free time, I enjoy watching Husker Football and Formula 1 Racing, as well as playing chess.   
             </p>
         </div>
         <div class="education">
@@ -49,6 +49,14 @@
             <p>1. Gunnels T, Shikiya RA, <b>York TC</b>, Block AJ, Bartz JC. Evidence for preexisting prion substrain diversity in a biologically cloned prion strain. PLOS Pathogens. 2023 Sep 5; 19(9): e1011632. </p>
             <p>2. Block AJ, <b>York TC</b>, Benedict R, Ma J, Bartz JC. Prion protein amio acid sequence influences formation of authentic synthetic PrP<sup>Sc</sup> .Scientific Reports. 2023 Jan; 12(1): 44. </p>
         </div>
+        <div class="abstracts">
+            <h2>Abstracts</h2>
+            <p>1. <b>York T</b>, Vargas L, Manatsathit W, Langnas A, Merani S. Anticoagulation in cirrhotic patients with portal vein thrombosis: impact on liver transplantation. Abstract P-200. Am J Transplantation. volume 24, Issue S1. 2024.</p>
+        </div>
+        <div class="posters"
+            <h2>Poster Presentations</h2>
+            <p>1. <b>York T</b>, Vargas L, Manatsathit W, Langnas A, Merani S. Anticoagulation in patients with cirrhosis and portal vein thrombosis: safety and impact on liver transplantation. Poster Presentation. Abstract 9. UNMC Transplant Symposium. Omaha, NE. March 2024</p>
+            <p>2. <b>York T</b>, Vargas L, Manatsathit W, Langnas A, Merani S. Anticoagulation in cirrhotic patients with portal vein thrombosis: impact on liver transplantation. Poster Presentation. Abstract P-200. ASTS Winter Symposium. Miami, FL. January 2024.</p>
         <div class="contact">
            <a href= "mailto: taylorcyork@gmail.com" <span class="material-icons">mail</span></a>
         </div>
