--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <p>1. <b>York T</b>, Vargas L, Manatsathit W, Langnas A, Merani S. Anticoagulation in cirrhotic patients with portal vein thrombosis: impact on liver transplantation. Abstract P-200. Am J Transplantation. volume 24, Issue S1. 2024.</p>
         </div>
         <div class="posters"
-            <h2>Poster Presentations</h2>
+            <p></p><h2>Poster Presentations</h2>
             <p>1. <b>York T</b>, Vargas L, Manatsathit W, Langnas A, Merani S. Anticoagulation in patients with cirrhosis and portal vein thrombosis: safety and impact on liver transplantation. Poster Presentation. Abstract 9. UNMC Transplant Symposium. Omaha, NE. March 2024</p>
             <p>2. <b>York T</b>, Vargas L, Manatsathit W, Langnas A, Merani S. Anticoagulation in cirrhotic patients with portal vein thrombosis: impact on liver transplantation. Poster Presentation. Abstract P-200. ASTS Winter Symposium. Miami, FL. January 2024.</p>
         <div class="contact">
