--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="about">
             <img src="images/TYHeadshot.png" class="about-img">
             <h1>Taylor York</h1>
-            <p>I am a fourth year medical student at the University of Nebraska Medical Center. During my free time I enjoy spending time outdoors, Husker Football, Creighton Basketball, and Formula 1 Racing.   
+            <p>I am a fourth year medical student at the University of Nebraska Medical Center. During my free time I enjoy spending time outdoors, reading, Husker football, Creighton basketball, and Formula 1 Racing.   
             </p>
         </div>
         <div class="education">
