--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
             <p>College of Medicine Class of '73 Scholarship 2023-2024</p>
             <p>Drs. Ann and David Sjulin Scholarship for Medicine 2022-2023</p>
             <p>UNMC Educational Scholarship Fund 2022-2023</p>
+            <p>Buss and Lydia Baltes Memorial Scholarship Fund 2022-2023</p>
             <p>Markoe First Generation Scholarship 2018-2022</p>
+            <p>Nebraska Hospital Association Foundation Health Care Career Scholarship</p>
+            <p>Nebraska State Elks Most Valuable Student Scholarship 2018-2022</p>
             <p>Oregon Trail Community Foundation Scholarship 2018-2022</p>
         </div>
         <div class="teaching">
