--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <p>UNMC Educational Scholarship Fund 2022-2023</p>
             <p>Buss and Lydia Baltes Memorial Scholarship Fund 2022-2023</p>
             <p>Markoe First Generation Scholarship 2018-2022</p>
-            <p>Nebraska Hospital Association Foundation Health Care Career Scholarship</p>
+            <p>Nebraska Hospital Association Foundation Health Care Career Scholarship 2018-2022</p>
             <p>Nebraska State Elks Most Valuable Student Scholarship 2018-2022</p>
             <p>Oregon Trail Community Foundation Scholarship 2018-2022</p>
         </div>
