--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         
           gtag('config', 'G-JFE5E03615');
         </script>
+        <meta name="description" content="Taylor York is a fourth year medical student at UNMC">
+        <meta name="author" content="Taylor York">
         <meta charset="utf-8">
         <title>Taylor York</title>
         <link rel="stylesheet" href="styles/style.css">
