--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         
           gtag('config', 'G-JFE5E03615');
         </script>
-        <meta name="description" content="Taylor York is a fourth year medical student at UNMC">
+        <meta name="description" content="Taylor is a fourth year medical student at UNMC">
         <meta name="author" content="Taylor York">
         <meta charset="utf-8">
         <title>Taylor York</title>
