--- a/index.html
+++ b/index.html
@@ -29,34 +29,34 @@
         </div>
         <div class="education">
             <h2>Education</h2>
-            <p>M.D., University of Nebraska Medical Center, Omaha, NE 2022-2026</p>
-            <p>B.S. in Biology, Creighton Unviversity, Omaha, NE 2018-2022</p>
+            <p style="text-align:left;">M.D., University of Nebraska Medical Center, Omaha, NE <span style="float:right;">2022-2026</span></p>
+            <p style="text-align:left;">B.S. in Biology, Creighton Unviversity, Omaha, NE 2018-2022</p>
         </div>
         <div class="awards">
             <h2>Honors and Awards</h2>
-            <p>Nebraska Medical Education Foundation Scholarship 2024-2025</p>
-            <p>Larry D. Skinner Scholarship 2023-2024</p>
-            <p>College of Medicine Class of '73 Scholarship 2023-2024</p>
-            <p>Drs. Ann and David Sjulin Scholarship for Medicine 2022-2023</p>
-            <p>UNMC Educational Scholarship Fund 2022-2023</p>
-            <p>Buss and Lydia Baltes Memorial Scholarship Fund 2022-2023</p>
-            <p>Markoe First Generation Scholarship 2018-2022</p>
-            <p>Nebraska Hospital Association Foundation Health Care Career Scholarship 2018-2022</p>
-            <p>Nebraska State Elks Most Valuable Student Scholarship 2018-2022</p>
-            <p>Oregon Trail Community Foundation Scholarship 2018-2022</p>
+            <p style="text-align:left;">Nebraska Medical Education Foundation Scholarship <span style="float:right;">2024-2025</span></p>
+            <p style="text-align:left;">Larry D. Skinner Scholarship <span style="float:right;">2023-2024</span></p>
+            <p style="text-align:left;">College of Medicine Class of '73 Scholarship <span style="float:right;">2023-2024</span></p>
+            <p style="text-align:left;">Drs. Ann and David Sjulin Scholarship for Medicine <span style="float:right;">2022-2023</span></p>
+            <p style="text-align:left;">UNMC Educational Scholarship Fund <span style="float:right;">2022-2023</span></p>
+            <p style="text-align:left;">Buss and Lydia Baltes Memorial Scholarship Fund <span style="float:right;">2022-2023</span></p>
+            <p style="text-align:left;">Markoe First Generation Scholarship <span style="float:right;">2018-2022</span></p>
+            <p style="text-align:left;">Nebraska Hospital Association Foundation Health Care Career Scholarship <span style="float:right;">2018-2022</span></p>
+            <p style="text-align:left;">Nebraska State Elks Most Valuable Student Scholarship <span style="float:right;">2018-2022</span></p>
+            <p style="text-align:left;">Oregon Trail Community Foundation Scholarship <span style="float:right;">2018-2022</span></p>
         </div>
         <div class="teaching">
             <h2>Teaching Activities</h2>
-            <p>Pre-clinical Curriculum Teaching Assistant 2025</p>
-            <p>Gastrointestinal Anatomy Teaching Assistant 2025</p>
-            <p>General Biology: Cellular and Molecular Lab Teaching Assistant 2021-2022</p>
-            <p>Physiology Lab Teaching Assistant 2021</p>
+            <p style="text-align:left;">Pre-clinical Curriculum Teaching Assistant <span style="float:right;">2025</span></p>
+            <p style="text-align:left;">Gastrointestinal Anatomy Teaching Assistant <span style="float:right;">2025</span></p>
+            <p style="text-align:left;">General Biology: Cellular and Molecular Lab Teaching Assistant <span style="float:right;">2021-2022</span></p>
+            <p style="text-align:left;">Physiology Lab Teaching Assistant <span style="float:right;">2021</span></p>
         </div>
         <div class="research">
             <h2>Research Experiences</h2>
-            <p>Medical Student Summer Research Program, UNMC 2023</p>
-            <p>Undergraduate Researcher, Creighton University 2019-2022</p>
-            <p>Laboratory Assistant, Creighton University 2018-2019</p>
+            <p style="text-align:left;">Medical Student Summer Research Program, UNMC <span style="float:right;">2023</span></p>
+            <p style="text-align:left;">Undergraduate Researcher, Creighton University <span style="float:right;">2019-2022</span></p>
+            <p style="text-align:left;">Laboratory Assistant, Creighton University <span style="float:right;">2018-2019</span></p>
         </div>
         <div class="publications">
             <h2>Publications</h2>
